tests/src/frontend/typechecking/invalid/overridable_abstract.sk
base class Foo {
  overridable fun foo(): void;
}
